java deprecation changes